--- a/ws.html
+++ b/ws.html
@@ -59,8 +59,8 @@ function GetNowURL(site){
 <body style="margin-top:1px;">
 <table align="right" valign="top">
 <tr>
-<td><input type="button" Value="群益證券" onclick="GetNowURL('2');" style="font-size:16px;font-weight: bold;width:100px;height:45px;border:2px #9999FF dashed;background-color:Orange;"></td>
-<td><input type="button" Value="元富證券" onclick="GetNowURL('1');" style="font-size:16px;font-weight: bold;width:100px;height:45px;border:2px #9999FF dashed;background-color:Orange ;"></td>
+<td><input id="s1" type="button" Value="群益證券" onclick="GetNowURL('2');" style="font-size:16px;font-weight: bold;width:100px;height:45px;border:2px #9999FF dashed;background-color:Orange;"></td>
+<td><input id="s2" type="button" Value="元富證券" onclick="GetNowURL('1');" style="font-size:16px;font-weight: bold;width:100px;height:45px;border:2px #9999FF dashed;background-color:Orange ;"></td>
 </tr>
 </table>
    
