--- a/main.html
+++ b/main.html
@@ -1,5 +1,8 @@
 <html> <head>
-  <title>權證搜尋網站</title>
+<meta property="og:description" content="僅提供權證搜尋參考"/>
+<meta name="description" content="僅提供權證搜尋參考" /> 
+	<title>權證搜尋網站</title>
+
   <script language="javascript">
     function QueryString(name) 
 {
