--- a/main.html
+++ b/main.html
@@ -1,7 +1,11 @@
 <html> <head>
-<meta property="og:description" content="僅提供權證搜尋參考"/>
-<meta name="description" content="僅提供權證搜尋參考" /> 
-	<title>權證搜尋網站</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="cache-control" content="no-cache" />
+<meta http-equiv="pragma" content="no-cache" />
+<meta http-equiv="expires" content="0" />
+<meta property="og:title" content="凱基、凱基證券、KGI、權證、凱基權證、凱基權證網、權証、權證交易、認購權證、認售權證、隱含波動率、波動率穩定、波動度穩定、隱波穩定、優質券商、權證推薦、隱波、權證小哥、權證A咖、權證一指通、權證計算機、策略選股" />
+<meta name="description" content="業界首創客製化功能，自設搜尋欄位、一鍵隱藏非自選權證，挑權證超方便！提供豐富、即時權證資訊，您權證投資的好幫手！" />
+<title>權證搜尋網站</title>
 
   <script language="javascript">
     function QueryString(name) 
