--- a/iws.html
+++ b/iws.html
@@ -3,7 +3,7 @@
   <script language="javascript">
   function QueryString(name) 
 {
-	var AllVars = top.window.location.search.substring(1);
+	var AllVars = window.location.search.substring(1);
 	var Vars = AllVars.split("&");
 	for (i = 0; i < Vars.length; i++)
 	{
