--- a/mws.html
+++ b/mws.html
@@ -45,7 +45,7 @@ function GetNowURL(){
   
 <frameset rows="45,*"  frameborder="0" framespacing="0" onload="GetNowURL();">
 　 <frame name="top" src="ws.html" noresize="noresize" scrolling="no">
-  <frame name="main" src="about:blnk">　　
+  <frame name="main" src="about:blank">　　
 </frameset>
 
  
