--- a/ws.html
+++ b/ws.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+<meta property="og:title" content="權證搜尋網站" />
+<meta name="description" content="僅提供權證搜尋參考" />
+<title>權證搜尋網站</title>
   <script language="javascript">
   function QueryString(name) 
 {
