--- a/mws.html
+++ b/mws.html
@@ -1,8 +1,4 @@
 <html> <head>
-<meta property="og:title" content="權證搜尋網站" />
-<meta name="description" content="僅提供權證搜尋參考" />
-<title>權證搜尋網站</title>
-
   <script language="javascript">
     function QueryString(name) {
 	var AllVars = window.location.search.substring(1);
@@ -50,7 +46,5 @@ function GetNowURL(){
 
  
 </head> 
-<body> <div id="des_Div">僅提供權證搜尋參考</div>
-	
-	</body> 
+<body></body> 
 </html>
