--- a/08-25/10930231.html
+++ b/08-25/10930231.html
@@ -238,7 +238,7 @@
       </tr>
           <tr valign="top">
          <td colspan="2" align="right">
-             <a href="./m/mws.html?id=3078">■權證搜尋參考</a>&nbsp; &nbsp; <a href="https://www.stockdog.com.tw/m/index.php?type=3&sid=3078">■三大法人參考</a>
+             <a href="/m/mws.html?id=3078">■權證搜尋參考</a>&nbsp; &nbsp; <a href="https://www.stockdog.com.tw/m/index.php?type=3&sid=3078">■三大法人參考</a>
         </td>
       </tr>
     </table>
