--- a/08-28/F81BEB48.html
+++ b/08-28/F81BEB48.html
@@ -236,7 +236,7 @@
       </tr>
 <tr valign="top">
          <td colspan="2" align="right">
-          <div id="des_Div" style="font-size:10px;color:red;font-weight:bold;">資料提供，不保證資料絕對無誤，亦不對任何資料不正確或遺漏所引起損失或損害負責。※僅作為研究參考，無推薦買賣之意，盈虧自付!</div>
+          <div id="des_Div" style="font-size:10px;color:red;font-weight:bold;">近十日，外資、投信、避險、三大法人、大額買賣、散戶買賣、主力分布..等相關籌碼資訊。資料提供，不保證資料絕對無誤，亦不對任何資料不正確或遺漏所引起損失或損害負責。※僅作為研究參考，無推薦買賣之意，盈虧自付!</div>
          </td>
       </tr>
          <tr valign="top">
