--- a/m/ws.html
+++ b/m/ws.html
@@ -2,7 +2,7 @@
 <head>
 <meta property="og:title" content="權證搜尋網站" />
 <meta name="description" content="連結券商行動版權證搜尋器，僅提供權證搜尋參考!" />
-<meta property="og:image" content="http://webchip.tk/img/rad2.jpg"/>
+<meta property="og:image" content="http://webchip.tk/img/sitelogo.jpg"/>
 
 <title>權證搜尋網站</title>
   <script language="javascript">
