--- a/08-29/3F71A3DE.html
+++ b/08-29/3F71A3DE.html
@@ -2,7 +2,8 @@
 <head>
 <meta property="og:title" content=" 聯茂 (6213) 近日籌碼" />
 <meta name="description" content="近十日，外資、投信、避險、三大法人、大額買賣、散戶買賣、主力分布..等相關籌碼資訊。資料提供，不保證資料絕對無誤，亦不對任何資料不正確或遺漏所引起損失或損害負責。※僅作為研究參考，無推薦買賣之意，盈虧自付!" />
- <title> 聯茂 (6213) 近日籌碼</title>
+<meta property="og:image" content="http://webchip.tk/img/chiplogo.jpg"/> 
+	<title> 聯茂 (6213) 近日籌碼</title>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
         google.charts.load("current", { packages: ['corechart'] });
