--- a/m/mch.html
+++ b/m/mch.html
@@ -14,7 +14,8 @@
 	  
 function GetNowURL(){
 	 
-	top.frames["main"].location.href = "https://www.stockdog.com.tw/m/index.php?type=3&sid="+QueryString("id");
+	//top.frames["main"].location.href = "https://www.stockdog.com.tw/m/index.php?type=3&sid="+QueryString("id");
+	top.frames["main"].location.href = "https://www.stockdog.com.tw/m/index.php?type=3&sid=0050";
 }  
 </script>
   
