--- a/m/ws.html
+++ b/m/ws.html
@@ -1,7 +1,7 @@
-<html>
+﻿<html>
 <head>
 <meta property="og:title" content="權證搜尋網站" />
-<meta name="description" content="連結券商行動版權證搜尋器，僅提供權證搜尋參考!" />
+<meta name="description" content="連結多個券商行動版權證搜尋器，提供權證搜尋參考!" />
 <meta property="og:image" content="http://webchip.tk/img/sitelogo.jpg"/>
 
 <title>權證搜尋網站</title>
